# nxpnfc

docs/: #夏日挑战赛# Openharmony 实现的一个IPC的客户端和服务端(L2)-开源基础软件社区-51CTO.COM.mhtml  #星光计划2.0# OpenHarmony SA 动态库服务 拉起的main入口-开源基础软件社区-51CTO.COM.mhtml  #过年不停更# Openharmony IPC通信(L2)-开源基础软件社区-51CTO.COM.mhtml  A2H_Porting.md  源码分析 ---------openHarmony IPC数据传输情景分析-开源基础软件社区-51CTO.COM.mhtml
docs/IPC通信继承关系_软件StarUML/: IPC通信继承关系_软件StarUML.mdj
docs/myapp/myappservice/: BUILD.gn  bundle.json
docs/myapp/myappservice/include/: myappproxy.h  myappservice.h  myappstub.h
docs/myapp/myappservice/interfaces/innerkits/: imyappservice.h
docs/myapp/myappservice/sa_profile/: 9000.xml  BUILD.gn
docs/myapp/myappservice/src/: main_client.cpp  myappproxy.cpp  myappservice.cpp  myappstub.cpp
nfc/: Android.bp  BUILD.gn
nfc/extns/impl/: Nxp_Features.h
nfc/halimpl/dnld/: phDnldNfc.cc
nfc/halimpl/hal/: phNxpNciHal.cc  phNxpNciHal_ext.cc
nfc/halimpl/src/halLibnfc/src/: BUILD.gn
nfc/halimpl/utils/: phNxpConfig.cpp
nxp/ese_clients/: BUILD.gn  README.md
nxp/ese_clients/utils/: phNxpConfig.cc
nxp/pn8xt/: device-nfc.mk  manifest.xml
nxp/pn8xt/conf/: libnfc-nxp-5V.conf  libnfc-nxp.conf
nxp/pn8xt/conf_557/: libnfc-nxp-5V.conf  libnfc-nxp.conf
nxp/pn8xt/sepolicy/: property_contexts
